tests/baselines/reference/parserModifierOnStatementInBlock1.errors.txt
parserModifierOnStatementInBlock1.ts(2,4): error TS1184: Modifiers cannot appear here.


==== parserModifierOnStatementInBlock1.ts (1 errors) ====
    export function foo() {
       export var x = this;
       ~~~~~~
!!! error TS1184: Modifiers cannot appear here.
    }
    